kubernetes/apps/watch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: watch
  namespace: default
spec:
  selector:
    app: watch
  ports:
    - port: 80
      targetPort: 8080
